package NKikimrConfig;
option java_package = "ru.yandex.kikimr.proto";

message TDataShardConfig {
    optional string BackupTaskName = 1 [default = "backup"];
    optional uint32 BackupTaskPriority = 2 [default = 10];
    optional uint64 BackupReadAheadLo = 3 [default = 524288];
    optional uint64 BackupReadAheadHi = 4 [default = 1048576];
    optional uint64 KeepSnapshotTimeout = 5 [default = 300000]; // milliseconds
    optional uint64 ChangesQueueItemsLimit = 6 [default = 10000];
    optional uint64 ChangesQueueBytesLimit = 7 [default = 131072000]; // 125 MB
    optional string RestoreTaskName = 8 [default = "restore"];
    optional uint32 RestoreTaskPriority = 9 [default = 10];
    optional uint64 CleanupSnapshotPeriod = 10 [default = 15000]; // milliseconds
    optional string TtlTaskName = 11 [default = "ttl"];
    optional uint32 TtlTaskPriority = 12 [default = 10];
    optional uint64 TtlReadAheadLo = 13 [default = 524288];
    optional uint64 TtlReadAheadHi = 14 [default = 1048576];
    optional uint64 IdleMemCompactionIntervalSeconds = 15 [default = 60];
    optional uint64 RestoreReadBufferSizeLimit = 16 [default = 268435456]; // 256 MB
    optional string CdcInitialScanTaskName = 17 [default = "cdc_initial_scan"];
    optional uint32 CdcInitialScanTaskPriority = 18 [default = 10];
    optional bool DisabledOnSchemeShard = 19 [default = false];
}
